<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.a16lao.wyh.ui.mine.activity.UpdatePasswordActivity">

    <include layout="@layout/view_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_both_space"
        android:paddingRight="@dimen/activity_both_space">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/text_update_verify"
            android:textColor="@color/color_3"
            android:textSize="@dimen/font_3" />

        <EditText
            android:id="@+id/edit_update_verify"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/text_register_verify"
            android:includeFontPadding="false"
            android:inputType="number"
            android:maxLength="6"
            android:paddingLeft="15dp"
            android:textColorHint="@color/color_5"
            android:textSize="@dimen/font_5" />

        <TextView
            android:id="@+id/text_update_get"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_verify_update"
            android:enabled="true"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/text_register_verify_get"
            android:textColor="@color/color_verify_update"
            android:textSize="@dimen/font_3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_both_space"
        android:paddingRight="@dimen/activity_both_space">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/text_update_psd"
            android:textColor="@color/color_3"
            android:textSize="@dimen/font_3" />

        <EditText
            android:id="@+id/edit_update_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/text_register_password_rule"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="15dp"
            android:textColorHint="@color/color_5"
            android:textSize="@dimen/font_5" />

        <LinearLayout
            android:id="@+id/layout_login_item"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/icon_update_eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/see_no" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/text_update_ok"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_btn"
        android:enabled="false"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/text_exit_sure"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_2" />
</LinearLayout>
