<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:paddingLeft="@dimen/activity_both_space"
    android:paddingRight="@dimen/activity_both_space">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_space"
        android:layout_alignParentTop="true"
        android:background="@color/color_7" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_sign_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/text_sign_day_3"
            android:textColor="@color/color_3"
            android:textSize="@dimen/font_3" />

        <TextView
            android:id="@+id/text_sign_bean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:includeFontPadding="false"
            android:text="@string/text_sign_bean_3"
            android:textColor="@color/color_1"
            android:textSize="@dimen/font_5" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_sign_done"
        android:layout_width="70dp"
        android:layout_height="34dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/border_c11_r15"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/text_sign_done"
        android:textColor="@color/color_11"
        android:textSize="@dimen/font_4" />


</RelativeLayout>