<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.a16lao.wyh.ui.main.activity.Register2Activity">

    <include layout="@layout/view_toolbar" />

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="60dp">

        <include
            android:id="@+id/view_register_verify"
            layout="@layout/view_login_item" />

        <include
            android:id="@+id/view_register_password"
            layout="@layout/view_login_item"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:includeFontPadding="false"
            android:text="@string/text_register_password_rule"
            android:textColor="@color/color_5"
            android:textSize="@dimen/font_5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center">

            <TextView
                android:id="@+id/text_register_protocol_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/protocol_sel"
                android:drawablePadding="6dp"
                android:drawableStart="@drawable/protocol_sel"
                android:includeFontPadding="false"
                android:text="@string/text_register_protocol_pre"
                android:textColor="@color/color_4"
                android:textSize="@dimen/font_4" />

            <TextView
                android:id="@+id/text_register_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/text_register_protocol"
                android:textColor="@color/color_11"
                android:textSize="@dimen/font_4" />
        </LinearLayout>


        <TextView
            android:id="@+id/text_register_done"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_btn"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/text_title_register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_2" />
    </LinearLayout>
</LinearLayout>
